# PDBtoolkit

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.py
src/: __init__.py  align.py  cealign.py  rmsd.py  selection.py  tmalign.py
src/pdbtoolkit/: __init__.py  align.py  antibodies.py  rmsd.py  selection.py  tmalign.py  utils.py
tests/: pymol_functions.py  test_alignment.py  test_antibodies.py
