[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdbtoolkit"
version = "0.1"
dependencies = [
    "numpy",
    "biopython",
    "abnumber",
    "numba",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
addopts = "-ra -q"
pythonpath = ["src"]